# cppgl

./: CMakeLists.txt  CMakePresets.json
include/glad/: glad.h
lib/: glfw3.lib
src/: glad.c  main.cpp
